--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "0.11.7"
   },
   "devDependencies": {
